replication/sutra-replication-package/sdk/sutra-compiler/tests/corpus/invalid/04_unclosed_brace.su
// Expected error: AKA0100 - missing `}` to close block.

function vector Bad() {
    var x = embed("cat");
    return x;
